sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:19: error: not found: value i
plusPetit(i:Int, j:Int) :Boolean
          ^AlgBubbleSort1:19: error: not found: value j
plusPetit(i:Int, j:Int) :Boolean
                 ^AlgBubbleSort1:20: error: not found: value i
echange(i:Int, j:Int) 
        ^AlgBubbleSort1:20: error: not found: value j
echange(i:Int, j:Int) 
               ^