sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n = getNombreValeurs()
  var j = 0
  var m = 1
  for (i<- 0 to n-1) {
    while (plusPetit(j,j+m)) {
      echange(j,j+m)
      m += 1
     m =0
     j += 1 
    }   
  }
}




plusPetit(i:Int, j:Int) :Boolean
echange(i:Int, j:Int)